# rag-playbook

./: .gitignore  README.md  config.py  main.py  pyproject.toml
evaluation/: benchmark_results.json  evaluate_technique.py  metrics.py  val.json
scripts/: 01_simple_rag.py  02_semantic_chunking.py  03_recursive_chunking.py  04_chunk_size_selector.py  05_proposition_chunking.py  06_context_enriched_rag.py  07_contextual_chunk_headers.py  08_document_augmentation.py  09_query_transform.py  10_reranker.py  11_rse.py  12_contextual_compression.py  13_fusion_rag.py  14_hyde.py  15_self_rag.py  16_crag.py  17_adaptive_rag.py  18_graph_rag.py  19_hierarchical_rag.py  benchmark_all_techniques.py  create_val_dataset.py  mix_improved_rag.py
src/: chunking.py  embedding.py  generator.py  graph_rag.py  hierarchical_rag.py  retriever.py  vector_store.py
